--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,4 @@
-=== 1.0.0 / 2009-04-13
+=== 0.4.0 / 2009-04-13
 
-* 1 major enhancement
-
-  * Birthday!
+* Cleaned up abstraction between memcache store and the refacebook class.
 
