--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,4 @@
-=== 0.4.0 / 2009-04-13
+=== 0.0.1 2009-07-13
 
-* Cleaned up abstraction between memcache store and the refacebook class.
-
+* 1 major enhancement:
+  * Initial release
